# intro-to-c

Übung 1/: Doxyfile  Uebung 1.aux  Uebung 1.out  Uebung 1.tex  foo.txt  hello  hello.c  makefile
Übung 1/html/: files.html  globals.html  globals_func.html  hello_8c.html  index.html
Übung 1/html/search/: functions_0.js  search.js
Übung 1/latex/: files.tex  hello_8c.tex  refman.aux  refman.idx  refman.ilg  refman.out  refman.tex  refman.toc
Übung 10/: Uebung 10.tex
Übung 10/src/: CMakeLists.txt  Main.cpp
Übung 10/src/io/: BitmapReader.hpp  MeshIO.hpp  PLYElement.hpp  Read3DS.hpp  ReadJPG.cpp  ReadPPM.cpp  ReadTGA.hpp
Übung 10/src/math/: Randomizer.cpp  Randomizer.hpp
Übung 10/src/rendering/: Asteroid.cpp  Asteroid.hpp  AsteroidField.cpp  AsteroidField.hpp  List.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  TexturedMesh.cpp  TexturedMesh.hpp  Transformable.cpp  TriangleMesh.cpp
Übung 10/src/util/: List.hpp  List.tcc
Übung 10/src/view/: Camera.cpp  Camera.hpp  MainWindow.cpp  MainWindow.hpp
Übung 11/: Uebung 11.tex
Übung 11/src/: CMakeLists.txt  Main.cpp  Summer.hpp  SummerTest.cpp  aufg1_2.cpp
Übung 11/src/io/: Logger.hpp  ReadJPG.cpp  ReadJPG.hpp  ReadTIFF.cpp  TextureFactory.cpp
Übung 11/src/math/: Quaternion.hpp  Vertex.hpp  Vertex.tcc
Übung 11/src/rendering/: Asteroid.hpp  AsteroidField.hpp  Bullet.cpp  Bullet.hpp  Fighter.cpp  Fighter.hpp  Skybox.hpp  Texture.hpp  TexturedMesh.hpp  Transformable.hpp
Übung 11/src/view/: Camera.cpp  MainWindow.cpp  MainWindow.hpp
Übung 12/: Uebung 12.tex  wc.map
Übung 12/src/: CMakeLists.txt  Main.cpp
Übung 12/src/ext/load3ds/math3d++/: math3d++.h
Übung 12/src/io/: Logger.cpp  PLYProperty.hpp  ReadPLY.cpp  ReadTGA.cpp  TriangleMeshFactory.cpp
Übung 12/src/math/: Quaternion.tcc  Vertex.hpp  Vertex.tcc
Übung 12/src/rendering/: Asteroid.cpp  AsteroidField.cpp  Bullet.cpp  Bullet.hpp  Fighter.cpp  Fighter.hpp  Materials.hpp  NavigationRoute.cpp  NavigationRoute.hpp  Skybox.hpp  Texture.cpp  TexturedMesh.cpp  Transformable.cpp  Transformable.hpp  TriangleMesh.cpp  TriangleMesh.hpp
Übung 12/src/util/: .PathPlanner.cpp.swp  .PathPlanner.hpp.swp  List.hpp  List.tcc  PathPlanner.cpp  PathPlanner.hpp
Übung 12/src/view/: MainWindow.cpp  MainWindow.hpp
Übung 2/: Uebung 2.aux  Uebung 2.out  Uebung 2.tex
Übung 2/EasterAlgorithm/: Doxyfile  Makefile  correct_easter_dates.out  easter  easter.c  run_test  years.in
Übung 2/EasterAlgorithm/doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  easter_8c.html  easter_8c_source.html  files.html  (+3 more)
Übung 2/EasterAlgorithm/html/: easter_8c.html  files.html  globals.html  globals_func.html  index.html
Übung 2/EasterAlgorithm/latex/: easter_8c.tex  files.tex  refman.aux  refman.idx  refman.ilg  refman.out  refman.tex  refman.toc
Übung 2/EasterAlgorithm/src/: easter.c
Übung 2/Sudoku/: Doxyfile  makefile  sudoku  sudoku.c  sudoku.h
Übung 2/Sudoku/html/: files.html  globals.html  globals_func.html  index.html  sudoku_8c.html
Übung 2/Sudoku/latex/: files.tex  refman.aux  refman.idx  refman.ilg  refman.out  refman.tex  refman.toc  sudoku_8c.tex
Übung 2/Sudoku/src/: sudoku.c
Übung 3/: Doxyfile  Uebung 3.tex
Übung 3/src/: CMakeLists.txt  main.c  mainwindow.c  pointer_test.c
Übung 3/src/include/: mainwindow.h
Übung 4/: Uebung 4.tex
Übung 4/src/: CMakeLists.txt  main.c  mainwindow.c  mainwindow.h  objio.c  objio.h
Übung 5/: Uebung 5.aux  Uebung 5.out  Uebung 5.tex
Übung 5/src/: camera.c  main.c  objio.c
Übung 5/src/include/: mainwindow.h  objio.h
Übung 5/uebung05/src/: CMakeLists.txt  camera.c  main.c  mainwindow.c
Übung 6/: Doxyfile  Uebung 6.tex
Übung 6/src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  TriangleMesh.cpp  camera.c  camera.h  main.c  main.h  mainwindow.c  plyio.c  plyio.h
Übung 6/src/include/: Camera.hpp  MainWindow.hpp  TriangleMesh.hpp
Übung 7/: Uebung 7.tex  model.ply
Übung 7/src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Global.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  Matrix.cpp  Matrix.hpp  ModelArrays.hpp  Quaternion.cpp  Quaternion.hpp  TriangleMesh.cpp  TriangleMesh.hpp  Vertex.cpp  Vertex.hpp
Übung 8/: Doxyfile  Uebung 8.tex
Übung 8/src/: CMakeLists.txt  Main.cpp
Übung 8/src/Debug/: makefile  sources.mk
Übung 8/src/Debug/ext/load3ds/: subdir.mk
Übung 8/src/Debug/io/: subdir.mk
Übung 8/src/Debug/math/: subdir.mk
Übung 8/src/Debug/rendering/: subdir.mk
Übung 8/src/Debug/view/: subdir.mk
Übung 8/src/ext/load3ds/math3d++/: math3d++.h
Übung 8/src/io/: BitmapReader.hpp  MeshReader.hpp  PLYTraits.cpp  Read3DS.cpp  Read3DS.hpp  ReadJPEG.cpp  ReadJPEG.hpp  ReadJPG.cpp  ReadJPG.hpp  ReadPPM.cpp  ReadPPM.hpp  ReadTGA.cpp  ReadTGA.hpp  TextureFactory.cpp  TextureFactory.hpp  TriangleMeshFactory.cpp  TriangleMeshFactory.hpp  test  test.cpp
Übung 8/src/math/: Matrix.cpp  Quaternion.cpp  Quaternion.hpp  Vertex.cpp
Übung 8/src/models/: box4.ppm
Übung 8/src/rendering/: FixedObject.hpp  Renderable.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  TexturedMesh.cpp  TexturedMesh.hpp  Transformable.hpp  TriangleMesh.cpp  TriangleMesh.hpp
Übung 8/src/view/: Camera.cpp  MainWindow.cpp  MainWindow.hpp
Übung 9/: Uebung 9.tex
Übung 9/src/: CMakeLists.txt  Main.cpp
Übung 9/src/exceptions/: BaseException.cpp  BaseException.hpp  DivisionByZeroException.cpp  DivisionByZeroException.hpp  OutOfBoundsException.cpp  OutOfBoundsException.hpp
Übung 9/src/io/: MeshReader.hpp  PLYTraits.hpp  ReadJPG.cpp  ReadPLY.hpp  ReadPPM.hpp  ReadTIFF.hpp  TextureFactory.hpp  TriangleMeshFactory.hpp
Übung 9/src/logging/: .Logger.cpp.swp  Logger.cpp  Logger.hpp
Übung 9/src/math/: Matrix.cpp  Matrix.hpp  Quaternion.cpp  Vertex.cpp  Vertex.hpp
Übung 9/src/rendering/: FixedObject.hpp  Renderable.hpp  Transformable.cpp  Transformable.hpp  TriangleMesh.cpp  TriangleMesh.hpp
Übung 9/src/time/: Timestamp.cpp  Timestamp.hpp
Übung 9/src/view/: Camera.cpp  Camera.hpp  MainWindow.cpp  MainWindow.hpp
(+47 files in other folders)
